pathmind-webapp/frontend/styles/views/new-experiment-view.css
.new-experiment-view .view-section {
    padding: var(--lumo-space-m);
    border-radius: 0;
    overflow: visible;
}

.new-experiment-view .page-title + vaadin-horizontal-layout {
    flex: 1;
}

.new-experiment-view .panel-title {
    max-width: 460px;
}

.new-experiment-view .panel-title + vaadin-horizontal-layout {
    height: 6.3rem;
}

.new-experiment-view .warning-label {
    line-height: 1;
    background: rgba(254, 193, 65, 0.7);
    padding: var(--lumo-space-xs);
    border: 1px solid var(--pm-gold-color);
    border-radius: var(--lumo-border-radius);
    margin-bottom: var(--lumo-space-m);
}

.new-experiment-view .section-title-label {
    line-height: 1;
    margin-bottom: var(--lumo-space-xs);
}

.new-experiment-view .reward-function-wrapper {
    flex: 2 0 auto;
    margin-top: 0;
}

.new-experiment-view .reward-function-wrapper .reward-fn-editor-panel {
    flex: 1 0 50%;
}

.new-experiment-view .reward-fn-panel-container {
    flex: 2;
}

.new-experiment-view .reward-variables-panel .reward-function-wrapper .reward-variables-table {
    max-height: none;
}

.new-experiment-view .reward-variables-panel > vaadin-vertical-layout {
    box-sizing: border-box;
    flex: 1 1 19rem;
    line-height: 1;
    padding: 0 var(--lumo-space-s) var(--lumo-space-xxxs);
    border: 1px solid var(--pm-grey-color);
    border-radius: var(--lumo-border-radius);
    overflow-y: auto;
}

.new-experiment-view .reward-function-wrapper .reward-variables-table {
    max-height: none;
}

.new-experiment-view .reward-variables-table .header-row {
    padding: var(--lumo-space-s) 0;
    border-bottom: 1px solid var(--pm-grey-color-lightest);
    margin-bottom: var(--lumo-space-s);
}

.new-experiment-view .reward-variables-table .header-row span {
    width: auto;
    line-height: 1;
    padding-top: 0 !important;
    padding-bottom: 0 !important;
}

.new-experiment-view .reward-variables-table vaadin-horizontal-layout {
    justify-content: space-between;
    margin-bottom: var(--lumo-space-xxs);
}

.new-experiment-view .error-and-notes-container {
    flex: 0 0 18rem;
    overflow: auto;
}

.new-experiment-view .errors-wrapper {
    display: flex;
    flex-direction: column;
    flex: 2;
}

.new-experiment-view .notes-wrapper {
    flex: 1;
}

.new-experiment-view .error-message-wrapper {
    flex: 1;
    box-sizing: border-box;
    width: 100%;
    white-space: pre;
    font-family: var(--code-font-family);
    background-color: var(--pm-app-bg-color);
    padding: var(--lumo-space-xs) var(--lumo-space-s);
    border: 1px solid var(--pm-grey-color);
    border-radius: var(--lumo-border-radius);
    overflow: auto;
}

.new-experiment-view .hasError {
    color: var(--pm-danger-color);
}

.new-experiment-view .noError {
    display: flex;
    color: var(--pm-friendly-color);
}

.new-experiment-view .noError iron-icon {
    margin-right: var(--lumo-space-xs);
}

.new-experiment-view .error-and-notes-container vaadin-button {
    min-width: calc(var(--lumo-button-size) * 1.625);
    height: 1.4rem;
    line-height: calc(1.4rem - 2px);
    font-size: var(--lumo-font-size-s);
    padding: 0 var(--lumo-space-s);
}

.new-experiment-view .notes-block .header span:nth-of-type(2),
.new-experiment-view .notes-block .header iron-icon,
.new-experiment-view .notes-block .header vaadin-button {
    display: none !important;
}

.reward-editor-error {
    align-self: flex-end;
    color: var(--pm-danger-color);
    margin-top: 0px;
}

.new-experiment-view .reward-editor-error {
    margin-bottom: var(--lumo-space-xs);
}

.reward-editor-error[hidden="true"] + * {
    margin-top: auto;
}

.reward-editor-error + * {
    margin-top: 0px;
}


.new-experiment-view .error-label {
    box-sizing: border-box;
    width: 100%;
}

.new-experiment-view .download-alp-link {
    align-self: center;
}

